# flake8-args-kwargs

./: .gitignore  Makefile  README.md  Untitled Diagram.drawio  flake8_args_kwargs.py  pyproject.toml  setup.cfg
.github/workflows/: CI.yaml
tests/: test_number_variable_functions.py
